<resources>
    <string name="app_name">CPEN391</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>

    <string name="ipAddress">http://44.235.47.205:8000/</string>
    <!--    <string name="ipAddress">http://3.96.206.29:8000/</string>-->

    <string name="limitation_summary_on">Able to set temperature in all range
    </string>
    <string name="limitation_summary_off">Only able to set temperature in fixed range</string>

    <string name="temp_header">Temperature</string>
    <string name="limitation_title">Limitation</string>
    <string name="accont_header">Account</string>
    <string name="start">Start</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_setting_game">Navigate to Settings?</string>

    <!-- ChatBot Questions and Answers -->

    <string name="account_settings">I want to ask about my account settings</string>
    <string name="account_settings_Q1">How do i change my profile pic?</string>
    <string name="account_settings_Q2">Where can I log out?</string>
    <string name="account_settings_Q3">Where can I delete my account?</string>
    <string name="account_settings_A1">This application syncs the profile picture of your Google account, your profile picture here will change if you modify the profile picture of your Google account</string>
    <string name="account_settings_A2">Please navigate to the home screen and open the navigation menu on the left. Open the "Settings" tab, and the log out option will be at the very top of the page</string>
    <string name="account_settings_A3">Please navigate to the home screen and open the navigation menu on the left. Open the "Settings" tab, and the delete account option will be at the bottom of the page</string>

    <string name="app_settings">I want to ask about app settings</string>
    <string name="app_settings_Q1">Where can I find application settings?</string>
    <string name="app_settings_Q2">Where can I manually change the application theme?</string>
    <string name="app_settings_Q3">At what time does the application switch light/dark themes automatically?</string>
    <string name="app_settings_A1">Please navigate to the home screen and open the navigation menu on the left, you will see the "Settings" tab</string>
    <string name="app_settings_A2">Please navigate to the home screen and open the navigation menu on the left, Open the "Settings" tab, and you can manually choose from light/dark themes in the middle of the page</string>
    <string name="app_settings_A3">The light theme will automatically switch on at 8:00 a.m. until 8:00 p.m., and The dark theme will automatically switch on at 8:00 p.m. until 8:00 a.m.</string>

    <string name="app_functionalities">I want to ask about app functionalities</string>

    <string name="app_functionalities_1">I want to ask about the report system</string>
    <string name="app_functionalities_1_Q1">Where can i report a facility or a review</string>
    <string name="app_functionalities_1_Q2">How many credits will I lose if I was reported successfully</string>
    <string name="app_functionalities_1_Q3">How long will it take the admin to process my report</string>
    <string name="app_functionalities_1_A1">For facilities, please navigate to a facility through the home page and scroll to the very bottom of the page for the "Report this Facility" button. For reporting reviews and comments, please navigate to a review/comment of a facility. You will see a "Report" button in the bottom right corner of the review/comment</string>
    <string name="app_functionalities_1_A2">You will lose 1 credit</string>
    <string name="app_functionalities_1_A3">Usually, the report will be processed within 24 hours, and 2 to 3 days the latest</string>

    <string name="app_functionalities_2">I want to ask about the review system</string>
    <string name="app_functionalities_2_Q1">Where can i review a facility?</string>
    <string name="app_functionalities_2_Q2">Can I review twice on the same facility?</string>
    <string name="app_functionalities_2_Q3">Can I comment on someone else\’s review?</string>
    <string name="app_functionalities_2_A1">Please navigate to a facility through the home page, you will see the "Rate" or "Comment" button on the top right of the facility\'s page</string>
    <string name="app_functionalities_2_A2">Unfortunately, this action is not allowed. Make sure to double check your review before submitting!</string>
    <string name="app_functionalities_2_A3">Unfortunately, this action is not allowed. But you can show your opinion of a review by upvoting or downvoting it!</string>

    <string name="app_functionalities_3">I want to ask about the credit system</string>
    <string name="app_functionalities_3_Q1">How much credit will I receive after a successful report?</string>
    <string name="app_functionalities_3_Q2">How much credit will I receive after reviewing a facility?</string>
    <string name="app_functionalities_3_Q3">How much credit will I receive after adding a facility?</string>
    <string name="app_functionalities_3_A1">You will receive 1 credit</string>
    <string name="app_functionalities_3_A2">You will receive 1 credit</string>
    <string name="app_functionalities_3_A3">You will receive 5 credits</string>
</resources>